# disney-kinesis-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  tests-integration.sh
examples/: README.md  advanced_consumer.rs  basic_consumer.rs  config_examples.rs  multi_worker.rs  resilient_consumer.rs  simple_producer.rs
src/: aggregated.rs  errors.rs  lease.rs  lib.rs  oversee.rs  types.rs  waiter.rs
tests/: calculate_acquire.json  create_new_leases.json  multilang.rs  populate.rs  workers.rs
tests/common/: mod.rs
tests/java/: build.sbt
tests/java/project/: plugins.sbt
tests/java/src/main/scala/: main.scala
