[package]
name = "disney-kinesis-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-process = "2.3.0"
async-rwlock = "1.3.0"
async-trait = "0.1.83"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.57.0"
aws-sdk-dynamodb = "1.56.0"
aws-sdk-kinesis = "1.53.0"
aws-sdk-schemas = "1.50.0"
aws-smithy-runtime-api = "1.7.3"
aws-smithy-types = "1.2.10"
derive_more = { version = "1.0.0", features = ["display", "debug", "error", "from"] }
futures = "0.3.31"
itertools = "0.13.0"
md5 = "0.7.0"
prost = "0.13"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4"] }
# dependency of aws-config, there's a security advisory for 0.10.3
zerovec-derive = "0.11.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
clap = { version = "4.0", features = ["derive"] }
